# preproc

./: .env.example  .gitignore  Dockerfile  LICENSE  Procfile  README.md  create_processor_files.py  create_test_files.py  docker-compose.yml  fix_files.py  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: main.py
api/core/: config.py  exceptions.py  logging.py
api/middleware/: logging.py
api/processors/: base.py  image.py  tabular.py  text.py
api/routes/: image.py  tabular.py  text.py
api/schemas/: image.py  tabular.py  text.py
app/: Home.py
app/components/: download_button.py  file_uploader.py  stats_panel.py
app/pages/: 1_tabular.py  2_text.py  3_image.py
app/utils/: api_client.py  charts.py
backend/: __init__.py  config.py  main.py  requirements.txt
backend/processors/: __init__.py  tabular.py  text.py
backend/utils/: validators.py
frontend/: app.py
frontend/utils/: helpers.py
samples/: sample.csv  sample.txt
scripts/: start.sh
tests/: __init__.py  conftest.py  test_tabular.py  test_text.py
tests/integration/: test_api.py
tests/unit/: test_image.py  test_tabular.py  test_text.py
