[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataprep-pro"
version = "1.0.0"
description = "A professional SaaS data preprocessing tool for machine learning workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Vismay TK", email = "vismaytk@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "streamlit>=1.31.0",
    # Data Processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    # Text Processing
    "nltk>=3.8.0",
    "langdetect>=1.0.9",
    # Image Processing
    "Pillow>=10.2.0",
    "opencv-python-headless>=4.9.0",
    # Visualization
    "plotly>=5.18.0",
    # HTTP Client
    "httpx>=0.27.0",
    # Config & Logging
    "pydantic>=2.4.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    # Rate Limiting
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "black>=24.1.0",
    "pandas-stubs>=2.1.0",
    "types-Pillow>=10.2.0",
    "types-requests>=2.31.0",
]

[tool.setuptools.packages.find]
include = ["api*", "app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/**" = ["N999"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
